# coupe-de-france

./: README.md
container_ros/: docker-compose.yml  readme.md
container_ros/ros/: Dockerfile
firmware/baniere/: platformio.ini
hardware/: hardware_cdf_2025.drawio  readme.md
map_2025 eurobot/: readme.md
map_2025 eurobot/src/eurobot2025/: CMakeLists.txt  package.xml
map_2025 eurobot/src/eurobot2025/env-hooks/: env_variables.zsh
map_2025 eurobot/src/eurobot2025/launch/: eurobot.launch
map_2025 eurobot/src/eurobot2025/models/Plank/: model.config  model.sdf
map_2025 eurobot/src/eurobot2025/models/can_2025/: model.config  model.sdf
map_2025 eurobot/src/eurobot2025/models/eurobot_arena_2025/: model.config  model.sdf
map_2025 eurobot/src/eurobot2025/models/eurobot_arena_2025/meshes/: eurobot_arena_2025.dae
map_2025 eurobot/src/eurobot2025/worlds/: eurobot2025_basic_north.world
software/: Diagramme sans nom.drawio  readme.md  software_cdf_2025.drawio  software_class_diagram.drawio
src/: main.cpp
